[update] fix cant deploy